Updated group name and group members

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Data Vis by Vira</title>
+  <title>Data Vis by Rizz</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=1250px, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Vira</a>
+          <a class="navbar-brand" href="#">Rizz</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -38,10 +38,10 @@
   
   <div class="jumbotron text-center">
     <h1>Data Visualization (90529)</h1>
-    <h2>Group Name: Vira</h2>
+    <h2>Group Name: Rizz</h2>
     <ul class="list-group">
       <li><b>Syed Muhammad Hasan</b></li>
-      <li><b>Farnaz Tizro</b></li>
+      <li><b>Muhammad Ahsan Iqbal</b></li>
     </ul>
     <p>As per the requirements of this course, we will be using a dataset from Kaggle and will analyze that dataset by visualizing its characteristics using different parameters. The chosen dataset is the 5M Trees dataset available <a target="_blank" href="https://www.kaggle.com/datasets/mexwell/5m-trees-dataset">here</a></p>
   </div>
