Final touch for assignment 2

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="text-component padding-md ">
                 <h2>Assignment Two</h2>
                 <p class="display@xs">This assigment contains Sankey diagram for different states, cities and their trees</p>
-                <p><a href="./Assignment 2/Sankey.html" target="_blank" class="btn btn--accent">Check it out</a></p>
+                <p><a href="./Assignment 2/html/Sankey.html" target="_blank" class="btn btn--accent">Check it out</a></p>
               </div>
             </div>
 
