--- a/Assignment 1/html/index.html
+++ b/Assignment 1/html/index.html
@@ -11,6 +11,8 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<link rel="stylesheet", href="../css/style.css">
+<!-- <script src="https://d3js.org/d3.v4.js"></script> -->
 </head>
 <body>
   
@@ -44,6 +46,13 @@
   </div>
 </section>
 
+<section style="
+padding-bottom: 200px;
+" class="chart-section">
+  <div id="chart-wrap"></div>
+</section>
+
+
 <!-- Section for Waffle chart   -->
 <section id="WaffleSection">
   
@@ -59,5 +68,6 @@
   </div>
 </section>
 <script src="../js/index.js"></script>
+<script src="../js/stacked.js"></script>
 </body>
 </html>
