--- a/Assignment 1/html/index.html
+++ b/Assignment 1/html/index.html
@@ -49,6 +49,11 @@
 <section style="
 padding-bottom: 200px;
 " class="chart-section">
+ <div>
+  <h3>Stacked Bar Graph:</h3>
+  <p>The stacked Graph shows 4 top tree categories for some cities </p>
+</div>
+
   <div id="chart-wrap"></div>
 </section>
 
