Assignment 3 base work

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="col-6 flex items-center height-100%">
               <div class="text-component padding-md ">
                 <h2>Assignment Three</h2>
-                <p class="display@xs">Description</p>
-                <p><a href="#0" class="btn btn--accent">Check it out</a></p>
+                <p class="display@xs">This assigment contains timelines and distribution for the temperatures recorded in the United States</p>
+                <p><a href="./Assignment 3/html/lines.html" class="btn btn--accent">Check it out</a></p>
               </div>
             </div>
 
@@ -71,13 +71,13 @@
             <div class="col-6 flex items-center height-100%">
               <div class="text-component padding-md ">
                 <h2>Assignment four</h2>
-                <p class="display@xs">Description</p>
+                <p class="display@xs">Description.</p>
                 <p><a href="#0" class="btn btn--accent">Check it out</a></p>
               </div>
             </div>
 
             <div class="col-6 height-100%">
-              <img class="block width-100% height-100% object-cover" src="assets/img/img-3.jpg" alt="Image description">
+              <img class="block width-100% height-100% object-cover" src="assets/img/img-4.jpg" alt="Image description">
             </div>
           </div>
         </li>
