fixed some issues and added description

--- a/Assignment 3/html/lines.html
+++ b/Assignment 3/html/lines.html
@@ -51,7 +51,7 @@
       <div id="LinesChart" class="container tab-pane active"><br>
         <header>
           <h3 >Design Choice For Line Chart:</h3>
-          <p id="description">Some description</p>
+          <p id="description">For this assignment, we were given the dataset for temperatures in the US from 1895 to 2023. And for this graph, we chose Time scale function of d3 on x-axis to represent time selected by user from the dropdown below and linear scale function for y-axis to represent temperature. The graph shows 3 types of data i.e. Maximum, Average and minmum temperatures. </p>
         </header>
         <div id="liveAlertPlaceholder"></div>
         <div class="mainContainer">
@@ -79,8 +79,8 @@
       <!-- Rigid Lines tab-->
       <div id="RidgeLine" class="container tab-pane fade"><br>
         <header>
-          <h3 >Design Choice For RidgeLine lines Chart:</h3>
-          <p id="description">Some description</p>
+          <h3 >Design Choice For RidgeLine Chart:</h3>
+          <p id="description">RidgeLine works best with distributions. So in order to utilized this plot, we had to tweak the data. We first took means of minimum and maximum temperatures of all months for each year and state. Then calculated the Kernel Density Estimation for mean minimum and maximum temperature and then plotted it on x-axis where as the y-axis represents the year(s) user selected. </p>
         </header>
         <div id="liveAlertPlaceholderRigid"></div>
         <div class="mainContainer">
