Choropleth Map commit

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="col-6 flex items-center height-100%">
               <div class="text-component padding-md ">
                 <h2>Assignment four</h2>
-                <p class="display@xs">Description.</p>
-                <p><a href="#0" class="btn btn--accent">Check it out</a></p>
+                <p class="display@xs">This assignment contains the maps visualization for tree data of the United States.</p>
+                <p><a href="./Assignment 4/html/maps.html" class="btn btn--accent">Check it out</a></p>
               </div>
             </div>
 
