Design choice and legend updated

--- a/Assignment 4/html/maps.html
+++ b/Assignment 4/html/maps.html
@@ -75,7 +75,7 @@
       <div id="ChoroplethMap" class="container tab-pane fade"><br>
         <header class="designChoiceHeader">
           <h3 >Design Choice For Choropleth Map:</h3>
-          <p id="description"> </p>
+          <p id="description">For the Choropleth map we have used the GeoJson for the states in United states from the public available sources. For the tree abundance, we have summed up the tree counts by state and also calculated the area covered by all trees in that state. Trees count and their area will be shown in tooltip when hovered over a state.</p>
         </header>
         
         
